// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/SelectDropdown Aucune Option Selectionee 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 -ml-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto text-gray-500 italic"
  >
    
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
  />
</button>
`;

exports[`Storyshots ui/shared/SelectDropdown Avec Placeholder 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 -ml-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto text-gray-500 italic"
  >
    À renseigner
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
  />
</button>
`;

exports[`Storyshots ui/shared/SelectDropdown Multi Select Aucune Option Selectionee 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 -ml-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto text-gray-500 italic"
  >
    
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
  />
</button>
`;

exports[`Storyshots ui/shared/SelectDropdown Multi Select Avec Placeholder 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 -ml-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto text-gray-500 italic"
  >
    À renseigner
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
  />
</button>
`;

exports[`Storyshots ui/shared/SelectDropdown Multi Select Une Option Selectionee 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 -ml-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto flex flex-col"
  >
    <span>
      Option 2
    </span>
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
  />
</button>
`;

exports[`Storyshots ui/shared/SelectDropdown Option Selectionee 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 -ml-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto"
  >
    Option 2
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
  />
</button>
`;
